<resources>
    <string name="app_name">Novels Reader</string>
    <string name="my_hero_academia">My Hero Academia</string>
    <string name="magic_and_muscles">Magic And Muscles</string>
    <string name="attack_on_titan">Attack On Titan</string>
    <string name="mieruko_chan">Mieruko-Chan</string>
    <string name="my_story">My Story</string>
    <string name="solo_leveling">Solo Leveling</string>
    <string name="one_punch_man">One Punch Man</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="to_do">TODO</string>
    <string name="jujutsu_kaisen">Jujutsu_Kaisen</string>
    <string name="deku_v_o_the_most_amazing_hero_in_the_entire_world_all_might_the_real_thing_in_the_flesh_standing_right_in_front_of_me_he_looks_so_much_cooler_in_person_holy_crap_i_gotta_get_an_autograph_i_ve_got_a_pen_around_here_somewhere_please_sign_my_notebook_screams_he_already_did_whimpering_thank_you_so_much_this_will_be_an_heirloom_a_family_treasure_passed_down_for_generations_to_come_uh_huh_well_i_ve_gotta_get_this_guy_to_the_police_so_they_can_take_care_of_him_stay_out_of_trouble_see_you_around_wait_you_re_leaving_already_pro_heroes_are_constantly_fighting_time_as_well_as_enemies_deku_v_o_he_can_t_go_yet_there_s_still_so_many_questions_i_have_to_ask_him_now_stand_back_i_m_taking_off_yells_thanks_for_your_continued_support_huh_screaming_hey_hey_hey_what_do_you_think_you_re_doing_let_go_i_love_my_fans_but_this_is_too_much_no_way_we_re_flying_if_i_let_go_now_i_ll_die_oh_that_s_a_good_point_i_just_have_a_lot_of_things_i_want_to_ask_you_personally_you_re_my_all_time_favourite_hero_all_might_please_okay_okay_i_get_it_just_keep_your_eyes_and_mouth_shut_sighs_coughing_shit_explosive_rumble_whimpering_my_whole_life_just_flashed_before_my_eyes_not_a_very_smart_move_bang_on_the_door_for_a_while_someone_will_let_you_in_now_i_have_to_go_see_you_on_the_flip_side_wait_not_yet_one_second_no_i_don_t_have_any_time_i_have_to_know_doctor_v_o_sorry_kid_it_s_not_gonna_happen_deku_s_mom_v_o_i_m_sorry_izuku_i_wish_things_were_different_bakugo_v_o_defenseless_izuku_the_school_s_already_crappy_you_really_wanna_embarrass_it_more_by_failing_so_hard_deku_sometimes_i_do_feel_like_i_m_a_failure_like_there_s_no_hope_for_me_but_even_so_i_m_not_gonna_give_up_ever_is_it_possible_to_become_a_hero_even_if_i_don_t_have_a_quirk_i_m_a_normal_kid_without_any_powers_could_i_ever_hope_to_be_someone_like_you_music_swells_deku_v_o_meeting_all_might_was_a_dream_come_true_a_real_miracle_standing_in_front_of_me_was_the_hero_i_idolised_most_of_my_life_i_didn_t_realise_it_at_the_time_but_that_chance_encounter_would_change_the_course_of_my_future_preview_all_might_v_o_never_fear_adoring_public_preview_all_might_v_o_never_fear_adoring_public_i_am_here_for_the_next_episode_preview_that_goo_villain_has_taken_a_boy_hostage_and_is_running_amok_in_the_town_this_isn_t_good_but_i_can_t_use_my_powers_much_longer_or_groans_you_re_pathetic_fraud_all_might">DEKU [V/O]: The most amazing hero in the entire world... All Might... the real thing... in the flesh... standing right in front of me! He looks so much cooler in person! Holy crap, I gotta get an autograph. I\'ve got a pen around here somewhere... Please sign my notebook. [screams] He already did! [whimpering] Thank you so much! This will be an heirloom, a family treasure passed down for generations to come! Uh-huh! Well, I\'ve gotta get this guy to the police so they can take care of him. Stay out of trouble, see you around! Wait... you\'re leaving? - Already? - Pro heroes are constantly fighting time as well as enemies! DEKU [V/O]: He can\'t go yet. There\'s still so many questions I have to ask him... Now stand back, I\'m taking off! [yells] Thanks for your continued support! Huh? [screaming] Hey, hey, hey! What do you think you\'re doing?! Let go! I love my fans but this is too much! No way, we\'re flying! If I let go now, I\'ll die! Oh, that\'s a good point. I just have a lot... of things I want to ask you, personally. You\'re my all-time favourite hero, All Might please! Okay, okay! I get it. Just keep your eyes and mouth shut. # # [sighs] [coughing] Shit! [explosive rumble] [whimpering] My whole life just flashed before my eyes. Not a very smart move. Bang on the door for a while, someone will let you in. Now, I have to go. See you on the flip side. Wait, not yet. - One second! - No! I don\'t have any time. I have to know! DOCTOR [V/O]: Sorry kid, it\'s not gonna happen... DEKU\'S MOM [V/O]: I\'m sorry, Izuku... I wish things were different... BAKUGO [V/O]: Defenseless Izuku! The school\'s already crappy, you really wanna embarrass it more by failing so hard? DEKU: Sometimes I do feel like I\'m a failure... like there\'s no hope for me. But even so... I\'m not gonna give up, ever! # # Is it possible to become a hero, even if I don\'t have a Quirk? I\'m a normal kid without any powers. Could I ever hope to be someone like you? # Music swells # DEKU [V/O]: Meeting All Might was a dream come true. A real miracle. Standing in front of me was the hero I idolised most of my life. I didn\'t realise it at the time, but that chance encounter would change the course of my future. # # PREVIEW ALL MIGHT [V/O]: Never fear, adoring public! PREVIEW ALL MIGHT [V/O]: Never fear, adoring public! I am here! For the next episode preview! That goo villain has taken a boy hostage and is running amok in the town? This isn\'t good! But... I can\'t use my powers much longer or... [groans] You\'re pathetic, fraud All Might!</string>
</resources>